// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle should not output CSS when unstyled prop is set 1`] = `
<h1
  class="emotion-0"
>
  My Blog Posts
</h1>
`;

exports[`PageTitle should output pageTitle CSS 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 4.2rem;
  line-height: 1.2380952380952381;
  margin: 0;
  margin: 0 0 4.8rem;
}

<h1
  class="emotion-0"
>
  My Blog Posts
</h1>
`;

exports[`PageTitle shouldn't have a margin when \`noMargin\` is true 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 4.2rem;
  line-height: 1.2380952380952381;
  margin: 0;
}

<h1
  class="emotion-0"
>
  Hello
</h1>
`;
